@@ -1,5 +1,10 @@
 # $Id$
 
+2007-06-20	Konstantin V. Arkhipov
+
+	* main/DAOs/GenericDAO.class.php: now all methods returning single
+	object or object list are using identity map.
+
 2007-06-19	Konstantin V. Arkhipov
 
 	* main/SPL/bundled/: removed, it was a bad idea.
